@@ -164,8 +164,11 @@ class StreamChildrenToListBlockOperation(BaseBlockOperation):
                 mapped_block_value.append(child_block)
 
         self.map_temp_blocks_to_list_items()
-        new_list_block = {"type": self.list_block_name, "value": self.temp_blocks}
-        mapped_block_value.append(new_list_block)
+
+        if self.temp_blocks:
+            new_list_block = {"type": self.list_block_name, "value": self.temp_blocks}
+            mapped_block_value.append(new_list_block)
+
         return mapped_block_value
 
     def map_temp_blocks_to_list_items(self):
@@ -206,8 +209,10 @@ class StreamChildrenToStreamBlockOperation(BaseBlockOperation):
             else:
                 mapped_block_value.append(child_block)
 
-        new_stream_block = {"type": self.stream_block_name, "value": stream_value}
-        mapped_block_value.append(new_stream_block)
+        if stream_value:
+            new_stream_block = {"type": self.stream_block_name, "value": stream_value}
+            mapped_block_value.append(new_stream_block)
+
         return mapped_block_value
 
     @property
